2010-12-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Split Preferences dialog Interface tab into subnotebook to reduce
   height of dialog (fixes #3141277). Reuses existing strings.
 * src/editor.c:
   Scroll to the current line when moving the cursor to the next
   cursor position in a snippet (#3139490).
 * doc/geany.txt, doc/geany.html:
   Add short 'View menu' section and 'Color schemes menu' section.
 * src/plugindata.h, src/plugins.c, plugins/geanyfunctions.h:
   Add filetypes_get_display_name() to API.


2010-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Reduce Set Build Commands dialog column 1 width by using '#' label.
   Fix memory leak.
 * src/build.c:
   Use italic for note labels in the Build Commands dialog.


2010-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/build.h:
   Replace doc-comments with '/* *' comments to show there's no build
   API for plugins.


2010-12-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/callbacks.c, src/vte.h, src/main.c:
   Fix segfaults when using 'Send Selection to Terminal' and the VTE
   is not loaded, and when using Ctrl-A after enabling the 'Load VTE'
   pref (patch by Dimitar Zhekov, thanks).
 * src/build.c, src/keyfile.c:
   Fix some more wrong uses of vte_info.load_vte instead of
   vte_info.have_vte.
 * src/main.c:
   Disable 'Send Selection to Terminal' item when not available
   instead of removing it to avoid trailing separator.
 * doc/geany.txt, doc/geany.html:
   Add 'Configuration file paths' section and link to it instead of
   repeating typical system data and user config directory paths.
   List 2 Tools->Configuration Files menu items.
   Add 'Plugin Manager' section break.
   Edit some related sections.
 * doc/geany.txt, doc/geany.html:
   Update Ignore Tags section with example and menu item.
 * doc/geany.txt, doc/geany.html: