@@ -840,6 +840,15 @@
 		      </child>
 
 		      <child>
+			<widget class="GtkMenuItem" id="insert_alternative_white_space1">
+			  <property name="visible">True</property>
+			  <property name="label" translatable="yes">_Insert Alternative White Space</property>
+			  <property name="use_underline">True</property>
+			  <signal name="activate" handler="on_insert_alternative_white_space1_activate" last_modification_time="Mon, 26 Oct 2009 17:34:30 GMT"/>
+			</widget>
+		      </child>
+
+		      <child>
 			<widget class="GtkSeparatorMenuItem" id="separator9">
 			  <property name="visible">True</property>
 			</widget>
@@ -2654,10 +2663,22 @@
   </child>
 
   <child>
-    <widget class="GtkMenuItem" id="insert1">
+    <widget class="GtkImageMenuItem" id="insert1">
       <property name="visible">True</property>
       <property name="label" translatable="yes">I_nsert</property>
       <property name="use_underline">True</property>
+
+      <child internal-child="image">
+	<widget class="GtkImage" id="image4055">
+	  <property name="visible">True</property>
+	  <property name="stock">gtk-add</property>
+	  <property name="icon_size">1</property>
+	  <property name="xalign">0.5</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	</widget>
+      </child>
 
       <child>
 	<widget class="GtkMenu" id="insert1_menu">
